[gd_scene load_steps=6 format=3 uid="uid://b7fkrtx014os7"]

[ext_resource type="Texture2D" uid="uid://bp0d5r7lbigjj" path="res://Assets/ManualAsset/Buttons/ButtonsBackground.png" id="1_26esx"]
[ext_resource type="Script" path="res://Scenes/game_over.gd" id="1_tth7w"]
[ext_resource type="FontFile" uid="uid://c6iy4fydtc4b0" path="res://Assets/ManualAsset/Fonts/easvhs.ttf" id="2_o4k8f"]
[ext_resource type="AudioStream" uid="uid://cxu4s7h4vp4fm" path="res://Assets/AssetsLittleRunmo/8_Music_Sound Effects/Death.wav" id="4_ql75j"]
[ext_resource type="AudioStream" uid="uid://cbilc72herfro" path="res://Assets/AssetsLittleRunmo/8_Music_Sound Effects/Button_Press_Sound.wav" id="5_7ni8c"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tth7w")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(333.5, 747.5)
scale = Vector2(1.02507, 7.38174)
texture = ExtResource("1_26esx")
metadata/_edit_lock_ = true

[node name="GameOverLabel" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 1.0
offset_top = -2.0
offset_right = 706.0
offset_bottom = 358.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("2_o4k8f")
theme_override_font_sizes/font_size = 120
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 242.0
offset_right = 709.0
offset_bottom = 511.0
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("2_o4k8f")
theme_override_font_sizes/font_size = 100
text = "Skor:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Retry" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 17.0
offset_top = 499.0
offset_right = 711.0
offset_bottom = 670.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/icon_pressed_color = Color(0.717647, 0.498039, 0.415686, 1)
theme_override_colors/icon_hover_color = Color(0.716579, 0.496472, 0.417389, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.717647, 0.498039, 0.415686, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_o4k8f")
theme_override_font_sizes/font_size = 90
action_mode = 0
text = "Ulang
"
icon = ExtResource("1_26esx")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Home" type="Button" parent="."]
z_index = 1
layout_mode = 0
offset_left = 14.0
offset_top = 704.0
offset_right = 708.0
offset_bottom = 875.0
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_hover_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/icon_pressed_color = Color(0.717647, 0.498039, 0.415686, 1)
theme_override_colors/icon_hover_color = Color(0.716579, 0.496472, 0.417389, 1)
theme_override_colors/icon_hover_pressed_color = Color(0.717647, 0.498039, 0.415686, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_o4k8f")
theme_override_font_sizes/font_size = 90
action_mode = 0
text = "Halaman Utama"
icon = ExtResource("1_26esx")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Audio" type="Node" parent="."]

[node name="GameOverSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_ql75j")
autoplay = true
bus = &"music"

[node name="ButtonPressed" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_7ni8c")
bus = &"sfx"

[connection signal="pressed" from="Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Home" to="." method="_on_home_pressed"]
